--- a/AXIT/style/header.css
+++ b/AXIT/style/header.css
@@ -65,7 +65,8 @@
 }
 
 .card-main-banner{
-    border: 3px solid red;
+    margin-bottom: 50px;
+    /* border: 3px solid red; */
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -133,7 +134,8 @@ color: #FFFFFF;
     text-transform: uppercase;
 }
 .card-form-banner{
-    border: 3px solid red;
+    margin-bottom: 50px;
+    /* border: 3px solid red; */
     background-color: #ffffff;
     border-radius: 10px;
     display: flex;
