--- a/AXIT/style/style.css
+++ b/AXIT/style/style.css
@@ -17,7 +17,14 @@
 
 }
 
-@media (max-width: 460px) {
+@media (max-width: 768px) {
+    .logo-banner{
+        display: none;
+    }
+    .card-main-banner{
+        text-align: center;
+        align-items: center;
+    }
     .social-media{
         text-align: center;
     }
